feat(i18n): add illegal input arguments

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -47,4 +47,4 @@ borrow.update.error = Error when update borrow
 borrow.delete.error = Error when delete borrow
 borrow.find.error = Error when find borrow
 
-
+illegal.input.argument= Illegal input argument
