--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -64,3 +64,5 @@ function.create.error = Error when create new function
 function.update.error = Error when update function
 function.delete.error = Error when delete function
 function.find.error = Function with code {0} not found
+
+illegal.input.argument= Illegal input argument
