--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -63,3 +63,5 @@ function.create.error = L?i khi t?o ch?c n?ng m?i
 function.update.error = L?i khi c?p nh?t ch?c n?ng
 function.delete.error = L?i khi xóa ch?c n?ng
 function.find.error = Không tìm th?y ch?c n?ng có mã {0}
+
+illegal.input.argument= ??u vào d? li?u không h?p l?
