feat(i18n): add keys and messages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,44 +7,55 @@ category.update.error = Error when update category
 category.delete.error = Error when delete category
 category.find.error = Error when find category
 
+book.view.success = Fetch books successfully
 book.create.success = Create book successfully
 book.update.success = Update book successfully
 book.delete.success = Delete book successfully
+book.destroy.success = Destroy book successfully
 book.create.error = Error when create new book
 book.update.error = Error when update book
 book.delete.error = Error when delete book
+book.destroy.error = Error when destroy book
 book.find.error = Error when find book
 
 post.create.success = Create post successfully
 post.update.success = Update post successfully
 post.delete.success = Delete post successfully
+post.destroy.success = Destroy post successfully
 post.create.error = Error when create new post
 post.update.error = Error when update post
 post.delete.error = Error when delete post
-post.find.error = Error when find post
+post.destroy.error = Error when delete post
+post.find.error = Error when find post with ID = {0}
 
 comment.create.success = Create comment successfully
 comment.update.success = Update comment successfully
 comment.delete.success = Delete comment successfully
+comment.destroy.success = Destroy comment successfully
 comment.create.error = Error when create new comment
 comment.update.error = Error when update comment
 comment.delete.error = Error when delete comment
+comment.destroy.error = Error when destroy comment
 comment.find.error = Error when find comment
 
 
 user.create.success = Create user successfully
 user.update.success = Update user successfully
 user.delete.success = Delete user successfully
+user.destroy.success = Destroy user successfully
 user.create.error = Error when create new user
 user.update.error = Error when update user
 user.delete.error = Error when delete user
+user.destroy.error = Error when destroy user
 
 borrow.create.success = Create borrow successfully
 borrow.update.success = Update borrow successfully
 borrow.delete.success = Delete borrow successfully
+borrow.destroy.success = Destroy borrow successfully
 borrow.create.error = Error when create new borrow
 borrow.update.error = Error when update borrow
 borrow.delete.error = Error when delete borrow
+borrow.destroy.error = Error when destroy borrow
 borrow.find.error = Error when find borrow
 
 illegal.input.argument= Illegal input argument
