refactor(Post, Comment): delegate owner checking to services and add keys for i18n

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,4 @@
-
+category.view.success = Fetch category successfully
 category.create.success= Create category successfully
 category.update.success = Update category successfully
 category.delete.success = Delete category successfully
@@ -7,7 +7,7 @@ category.update.error = Error when update category
 category.delete.error = Error when delete category
 category.find.error = Error when find category
 
-book.view.success = Fetch books successfully
+book.view.success = Fetch book successfully
 book.create.success = Create book successfully
 book.update.success = Update book successfully
 book.delete.success = Delete book successfully
@@ -18,6 +18,7 @@ book.delete.error = Error when delete book
 book.destroy.error = Error when destroy book
 book.find.error = Error when find book
 
+post.view.success = Fetch post successfully
 post.create.success = Create post successfully
 post.update.success = Update post successfully
 post.delete.success = Delete post successfully
@@ -27,7 +28,9 @@ post.update.error = Error when update post
 post.delete.error = Error when delete post
 post.destroy.error = Error when delete post
 post.find.error = Error when find post with ID = {0}
+post.invalid.owner = You are not the post's owner
 
+comment.view.success = Fetch comment successfully
 comment.create.success = Create comment successfully
 comment.update.success = Update comment successfully
 comment.delete.success = Delete comment successfully
@@ -37,8 +40,9 @@ comment.update.error = Error when update comment
 comment.delete.error = Error when delete comment
 comment.destroy.error = Error when destroy comment
 comment.find.error = Error when find comment
+comment.invalid.owner = You are not the comment's owner
 
-
+user.view.success = Fetch user successfully
 user.create.success = Create user successfully
 user.update.success = Update user successfully
 user.delete.success = Delete user successfully
@@ -48,6 +52,7 @@ user.update.error = Error when update user
 user.delete.error = Error when delete user
 user.destroy.error = Error when destroy user
 
+borrow.view.success = Fetch borrow successfully
 borrow.create.success = Create borrow successfully
 borrow.update.success = Update borrow successfully
 borrow.delete.success = Delete borrow successfully
