refactor(Response): refactor responses in controller and delegate response returning to ResponseUtil fully

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,6 +8,7 @@ category.delete.error = Error when delete category
 category.find.error = Error when find category
 
 book.view.success = Fetch book successfully
+book.sync.success = Sync book successfully
 book.create.success = Create book successfully
 book.update.success = Update book successfully
 book.delete.success = Delete book successfully
@@ -51,6 +52,9 @@ user.create.error = Error when create new user
 user.update.error = Error when update user
 user.delete.error = Error when delete user
 user.destroy.error = Error when destroy user
+user.login.success = Login successfully
+user.logout.success = Logout successfully
+user.register.success = Register successfully
 
 borrow.view.success = Fetch borrow successfully
 borrow.create.success = Create borrow successfully
@@ -62,5 +66,27 @@ borrow.update.error = Error when update borrow
 borrow.delete.error = Error when delete borrow
 borrow.destroy.error = Error when destroy borrow
 borrow.find.error = Error when find borrow
+
+role_group.view.success = Fetch role group successfully
+role_group.create.success = Create role group successfully
+role_group.update.success = Update role group successfully
+role_group.delete.success = Delete role group successfully
+role_group.destroy.success = Destroy role group successfully
+role_group.create.error = Error when create new role group
+role_group.update.error = Error when update role group
+role_group.delete.error = Error when delete role group
+role_group.destroy.error = Error when destroy role group
+role_group.find.error = Error when find role group
+
+function.view.success = Fetch function successfully
+function.create.success = Create function successfully
+function.update.success = Update function successfully
+function.delete.success = Delete function successfully
+function.destroy.success = Destroy function successfully
+function.create.error = Error when create new function
+function.update.error = Error when update function
+function.delete.error = Error when delete function
+function.destroy.error = Error when destroy function
+function.find.error = Error when find function
 
 illegal.input.argument= Illegal input argument
